--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -151,6 +151,20 @@ presubmits:
         - "./test/presubmit-integration-tests-latest-release.sh"
       dot-dev: true
 
+  knative/client-contrib:
+    - repo-settings:
+      go112-branches:
+      - release-0.9 # This branch doesn't actually exist, create here to make
+      # config generator work
+    - build-tests: true
+      dot-dev: true
+    - unit-tests: true
+      dot-dev: true
+    - integration-tests: true
+      dot-dev: true
+    - go-coverage: true
+      dot-dev: true
+
   knative/eventing:
     - repo-settings:
       performance: true
@@ -468,6 +482,11 @@ periodics:
       dot-dev: true
       go113: true
     - auto-release: true
+      dot-dev: true
+      go113: true
+
+  knative/client-contrib:
+    - continuous: true
       dot-dev: true
       go113: true
 
