move boskos config files to a separate folder

--- a/config/prow/Makefile
+++ b/config/prow/Makefile
@@ -38,7 +38,7 @@ PROW_CONFIG_GCS  ?= gs://$(PROW_GCS)/configs
 TESTGRID_GCS    ?= knative-testgrid
 TESTGRID_CONFIG ?= $(PROW_DIR)/testgrid.yaml
 
-BOSKOS_RESOURCES ?= $(PROW_DIR)/boskos_resources.yaml
+BOSKOS_RESOURCES ?= $(PROW_DIR)/boskos/boskos_resources.yaml
 
 # Useful shortcuts.
 
