do not generate testgrid config for prow-staging

--- a/config/prow/staging/Makefile
+++ b/config/prow/staging/Makefile
@@ -21,13 +21,13 @@ PROJECT                   := knative-tests-staging
 PROW_GCS                  := knative-prow-staging
 PROW_HOST                 := https://prow-staging.knative.dev
 TESTGRID_GCS              := knative-testgrid-staging
+GENERATE_TESTGRID_CONFIG  := false
 GENERATE_MAINTENANCE_JOBS := false
 
 KNATIVE_CONFIG   := $(STAGING_DIR)/config_staging.yaml
 PROW_PLUGINS     := $(STAGING_DIR)/plugins.yaml
 PROW_CONFIG      := $(STAGING_DIR)/config.yaml
 PROW_JOB_CONFIG := $(STAGING_DIR)/jobs/config.yaml
-TESTGRID_CONFIG  := $(STAGING_DIR)/testgrid.yaml
 BOSKOS_RESOURCES := $(STAGING_DIR)/boskos_resources.yaml
 
 include $(STAGING_DIR)/../Makefile
