--- a/config/prow/staging/jobs/config.yaml
+++ b/config/prow/staging/jobs/config.yaml
@@ -17,6 +17,7 @@
 # ####     USE "make config" TO REGENERATE THIS FILE.     ####
 # ####                                                    ####
 # ############################################################
+# FROM COMMIT: ((COMMIT_HASH_TOKEN))
 presubmits:
   knative-prow-robot/serving:
   - name: pull-knative-prow-robot-serving-build-tests
