--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -421,6 +421,10 @@ periodics:
       full-command: "./test/e2e-tests.sh --ambassador-version latest"
       dot-dev: true
       go113: true
+    - custom-job: https
+      full-command: "./test/e2e-tests.sh --https"
+      dot-dev: true
+      go113: true
     - nightly: true
       dot-dev: true
       go113: true
