--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -83,6 +83,9 @@ test_groups:
 - name: ci-knative-serving-ambassador-latest
   gcs_prefix: knative-prow/logs/ci-knative-serving-ambassador-latest
   alert_stale_results_hours: 3
+- name: ci-knative-serving-https
+  gcs_prefix: knative-prow/logs/ci-knative-serving-https
+  alert_stale_results_hours: 3
 - name: ci-knative-serving-nightly-release
   gcs_prefix: knative-prow/logs/ci-knative-serving-nightly-release
   num_failures_to_alert: 1
@@ -342,6 +345,9 @@ dashboards:
     base_options: "sort-by-name="
   - name: ambassador-latest
     test_group_name: ci-knative-serving-ambassador-latest
+    base_options: "sort-by-name="
+  - name: https
+    test_group_name: ci-knative-serving-https
     base_options: "sort-by-name="
   - name: nightly
     test_group_name: ci-knative-serving-nightly-release
