Add autotls test as a separate presubmit test for serving

--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -41,6 +41,13 @@ presubmits:
       args:
       - "--run-test"
       - "./test/e2e-upgrade-tests.sh"
+    - custom-test: autotls-tests
+      dot-dev: true
+      always_run: false # TODO(chaodaiG): Lets make sure it works before turn on
+      optional: true
+      args:
+      - "--run-test"
+      - "./test/e2e-auto-tls.sh"
     - custom-test: smoke-tests
       dot-dev: true
       #
