--- a/tools/config-generator/templates/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow_plugins.yaml
@@ -104,3 +104,12 @@ plugins:
   - wip
   - yuks
 [[end]]
+
+external_plugins:
+[[range .TideRepos]]
+  [[.]]:
+  - name: needs-rebase
+    events:
+      - issue_comment
+      - pull_request
+[[end]]
