Add needs-rebase to missingLabels
Follow up https://github.com/knative/test-infra/pull/1732

This patch adds needs-rebase to missingLabels, to stop merging by
mistake when PR has the needs-rebase label.

--- a/tools/config-generator/templates/prow_config.yaml
+++ b/tools/config-generator/templates/prow_config.yaml
@@ -87,6 +87,7 @@ tide:
     - do-not-merge/hold
     - do-not-merge/work-in-progress
     - do-not-merge/invalid-owners-file
+    - needs-rebase
   merge_method:
     knative: squash
     google/knative-gcp: squash
