--- a/config/prow/core/config.yaml
+++ b/config/prow/core/config.yaml
@@ -120,6 +120,7 @@ tide:
     - do-not-merge/hold
     - do-not-merge/work-in-progress
     - do-not-merge/invalid-owners-file
+    - needs-rebase
   merge_method:
     knative: squash
     google/knative-gcp: squash
