--- a/config/prow/staging/config.yaml
+++ b/config/prow/staging/config.yaml
@@ -104,6 +104,7 @@ tide:
     - do-not-merge/hold
     - do-not-merge/work-in-progress
     - do-not-merge/invalid-owners-file
+    - needs-rebase
   merge_method:
     knative: squash
     google/knative-gcp: squash
