--- a/config/prow/jobs/config.yaml
+++ b/config/prow/jobs/config.yaml
@@ -345,11 +345,10 @@ presubmits:
   - name: pull-knative-serving-autotls-tests
     agent: kubernetes
     context: pull-knative-serving-autotls-tests
-    always_run: false
+    always_run: true
     rerun_command: "/test pull-knative-serving-autotls-tests"
     trigger: "(?m)^/test (all|pull-knative-serving-autotls-tests),?(\\s+|$)"
     decorate: true
-    optional: true
     path_alias: knative.dev/serving
     branches:
     - "release-0.9"
@@ -379,11 +378,10 @@ presubmits:
   - name: pull-knative-serving-autotls-tests
     agent: kubernetes
     context: pull-knative-serving-autotls-tests
-    always_run: false
+    always_run: true
     rerun_command: "/test pull-knative-serving-autotls-tests"
     trigger: "(?m)^/test (all|pull-knative-serving-autotls-tests),?(\\s+|$)"
     decorate: true
-    optional: true
     path_alias: knative.dev/serving
     skip_branches:
     - "release-0.9"
